<resources>
    <string name="app_name">Group14_InClass04</string>
    <string-array name="length_array">
        <item>Select Password Length</item>
        <item>8-12</item>
        <item>13-17</item>
        <item>18-22</item>
    </string-array>
    <string name="numbers">Numbers</string>
    <string name="uppercase">UpperCase Letters</string>
    <string name="lowercase">LowerCase Letters</string>
    <string name="special">Special Characters</string>
    <string name="generate_thread">Generate Password (Thread)</string>
    <string name="generate_async">Generate Password (AsyncTask)</string>
</resources>
